nim/src/autd3/native_methods/autd3capi_gain_holo.h

#    define dll "bin/autd3capi-gain-holo.dll"
#    define dll "bin/libautd3capi-gain-holo.dylib"
#    define dll "bin/libautd3capi-gain-holo.so"
void AUTDGainHoloSDP(void** gain, void* backend, float64 alpha, float64 lambda, uint64 repeat);
void AUTDGainHoloEVP(void** gain, void* backend, float64 gamma);
void AUTDGainHoloNaive(void** gain, void* backend);
void AUTDGainHoloGS(void** gain, void* backend, uint64 repeat);
void AUTDGainHoloGSPAT(void** gain, void* backend, uint64 repeat);
void AUTDGainHoloLM(void** gain, void* backend, float64 eps_1, float64 eps_2, float64 tau, uint64 k_max, float64* initial, int32 initial_size);
void AUTDGainHoloGreedy(void** gain, void* backend, int32 phase_div);
void AUTDGainHoloAdd(void* gain, float64 x, float64 y, float64 z, float64 amp);