python/pyautd3/native_methods/autd3capi_gain_holo.py

# This file is autogenerated
import threading
import ctypes
import os
from typing import Any




class Singleton(type):
    _instances = {} # type: ignore
    _lock = threading.Lock()

    def __call__(cls, *args, **kwargs):
        if cls not in cls._instances:
            with cls._lock:
                if cls not in cls._instances:
                    cls._instances[cls] = super(Singleton, cls).__call__(*args, **kwargs)
        return cls._instances[cls]


class NativeMethods(metaclass=Singleton):

    def init_dll(self, bin_location: str, bin_prefix: str, bin_ext: str):
        try:
            self.dll = ctypes.CDLL(os.path.join(bin_location, f'{bin_prefix}autd3capi-gain-holo{bin_ext}'))
        except FileNotFoundError:
            return

        self.dll.AUTDDefaultBackend.argtypes = [] 
        self.dll.AUTDDefaultBackend.restype = ctypes.c_void_p

        self.dll.AUTDGainHoloSDP.argtypes = [ctypes.c_void_p] 
        self.dll.AUTDGainHoloSDP.restype = ctypes.c_void_p

        self.dll.AUTDGainHoloSDPAlpha.argtypes = [ctypes.c_void_p, ctypes.c_double] 
        self.dll.AUTDGainHoloSDPAlpha.restype = None

        self.dll.AUTDGainHoloSDPLambda.argtypes = [ctypes.c_void_p, ctypes.c_double] 
        self.dll.AUTDGainHoloSDPLambda.restype = None

        self.dll.AUTDGainHoloSDPRepeat.argtypes = [ctypes.c_void_p, ctypes.c_uint32] 
        self.dll.AUTDGainHoloSDPRepeat.restype = None

        self.dll.AUTDGainHoloEVP.argtypes = [ctypes.c_void_p] 
        self.dll.AUTDGainHoloEVP.restype = ctypes.c_void_p

        self.dll.AUTDGainHoloEVPGamma.argtypes = [ctypes.c_void_p, ctypes.c_double] 
        self.dll.AUTDGainHoloEVPGamma.restype = None

        self.dll.AUTDGainHoloGS.argtypes = [ctypes.c_void_p] 
        self.dll.AUTDGainHoloGS.restype = ctypes.c_void_p

        self.dll.AUTDGainHoloGSRepeat.argtypes = [ctypes.c_void_p, ctypes.c_uint32] 
        self.dll.AUTDGainHoloGSRepeat.restype = None

        self.dll.AUTDGainHoloGSPAT.argtypes = [ctypes.c_void_p] 
        self.dll.AUTDGainHoloGSPAT.restype = ctypes.c_void_p

        self.dll.AUTDGainHoloGSPATRepeat.argtypes = [ctypes.c_void_p, ctypes.c_uint32] 
        self.dll.AUTDGainHoloGSPATRepeat.restype = None

        self.dll.AUTDGainHoloNaive.argtypes = [ctypes.c_void_p] 
        self.dll.AUTDGainHoloNaive.restype = ctypes.c_void_p

        self.dll.AUTDGainHoloGreedy.argtypes = [] 
        self.dll.AUTDGainHoloGreedy.restype = ctypes.c_void_p

        self.dll.AUTDGainHoloGreedyPhaseDiv.argtypes = [ctypes.c_void_p, ctypes.c_uint32] 
        self.dll.AUTDGainHoloGreedyPhaseDiv.restype = None

        self.dll.AUTDGainHoloLM.argtypes = [ctypes.c_void_p] 
        self.dll.AUTDGainHoloLM.restype = ctypes.c_void_p

        self.dll.AUTDGainHoloLMEps1.argtypes = [ctypes.c_void_p, ctypes.c_double] 
        self.dll.AUTDGainHoloLMEps1.restype = None

        self.dll.AUTDGainHoloLMEps2.argtypes = [ctypes.c_void_p, ctypes.c_double] 
        self.dll.AUTDGainHoloLMEps2.restype = None

        self.dll.AUTDGainHoloLMTau.argtypes = [ctypes.c_void_p, ctypes.c_double] 
        self.dll.AUTDGainHoloLMTau.restype = None

        self.dll.AUTDGainHoloLMKMax.argtypes = [ctypes.c_void_p, ctypes.c_uint32] 
        self.dll.AUTDGainHoloLMKMax.restype = None

        self.dll.AUTDGainHoloLMInitial.argtypes = [ctypes.c_void_p, ctypes.POINTER(ctypes.c_double), ctypes.c_uint64] 
        self.dll.AUTDGainHoloLMInitial.restype = None

        self.dll.AUTDGainHoloAdd.argtypes = [ctypes.c_void_p, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double] 
        self.dll.AUTDGainHoloAdd.restype = None

        self.dll.AUTDGainHoloSetDotCareConstraint.argtypes = [ctypes.c_void_p] 
        self.dll.AUTDGainHoloSetDotCareConstraint.restype = None

        self.dll.AUTDGainHoloSetNormalizeConstraint.argtypes = [ctypes.c_void_p] 
        self.dll.AUTDGainHoloSetNormalizeConstraint.restype = None

        self.dll.AUTDGainHoloSetUniformConstraint.argtypes = [ctypes.c_void_p, ctypes.c_double] 
        self.dll.AUTDGainHoloSetUniformConstraint.restype = None

        self.dll.AUTDGainHoloSetClampConstraint.argtypes = [ctypes.c_void_p, ctypes.c_double, ctypes.c_double] 
        self.dll.AUTDGainHoloSetClampConstraint.restype = None

        self.dll.AUTDDeleteGainHolo.argtypes = [ctypes.c_void_p] 
        self.dll.AUTDDeleteGainHolo.restype = None

    def default_backend(self) -> ctypes.c_void_p:
        return self.dll.AUTDDefaultBackend()

    def gain_holo_sdp(self, backend: ctypes.c_void_p) -> ctypes.c_void_p:
        return self.dll.AUTDGainHoloSDP(backend)

    def gain_holo_sdp_alpha(self, holo: ctypes.c_void_p, alpha: float) -> None:
        return self.dll.AUTDGainHoloSDPAlpha(holo, alpha)

    def gain_holo_sdp_lambda(self, holo: ctypes.c_void_p, lambda_: float) -> None:
        return self.dll.AUTDGainHoloSDPLambda(holo, lambda_)

    def gain_holo_sdp_repeat(self, holo: ctypes.c_void_p, repeat: int) -> None:
        return self.dll.AUTDGainHoloSDPRepeat(holo, repeat)

    def gain_holo_evp(self, backend: ctypes.c_void_p) -> ctypes.c_void_p:
        return self.dll.AUTDGainHoloEVP(backend)

    def gain_holo_evp_gamma(self, holo: ctypes.c_void_p, gamma: float) -> None:
        return self.dll.AUTDGainHoloEVPGamma(holo, gamma)

    def gain_holo_gs(self, backend: ctypes.c_void_p) -> ctypes.c_void_p:
        return self.dll.AUTDGainHoloGS(backend)

    def gain_holo_gs_repeat(self, holo: ctypes.c_void_p, repeat: int) -> None:
        return self.dll.AUTDGainHoloGSRepeat(holo, repeat)

    def gain_holo_gspat(self, backend: ctypes.c_void_p) -> ctypes.c_void_p:
        return self.dll.AUTDGainHoloGSPAT(backend)

    def gain_holo_gspat_repeat(self, holo: ctypes.c_void_p, repeat: int) -> None:
        return self.dll.AUTDGainHoloGSPATRepeat(holo, repeat)

    def gain_holo_naive(self, backend: ctypes.c_void_p) -> ctypes.c_void_p:
        return self.dll.AUTDGainHoloNaive(backend)

    def gain_holo_greedy(self) -> ctypes.c_void_p:
        return self.dll.AUTDGainHoloGreedy()

    def gain_holo_greedy_phase_div(self, holo: ctypes.c_void_p, div: int) -> None:
        return self.dll.AUTDGainHoloGreedyPhaseDiv(holo, div)

    def gain_holo_lm(self, backend: ctypes.c_void_p) -> ctypes.c_void_p:
        return self.dll.AUTDGainHoloLM(backend)

    def gain_holo_lm_eps_1(self, holo: ctypes.c_void_p, eps_1: float) -> None:
        return self.dll.AUTDGainHoloLMEps1(holo, eps_1)

    def gain_holo_lm_eps_2(self, holo: ctypes.c_void_p, eps_2: float) -> None:
        return self.dll.AUTDGainHoloLMEps2(holo, eps_2)

    def gain_holo_lm_tau(self, holo: ctypes.c_void_p, tau: float) -> None:
        return self.dll.AUTDGainHoloLMTau(holo, tau)

    def gain_holo_lmk_max(self, holo: ctypes.c_void_p, k_max: int) -> None:
        return self.dll.AUTDGainHoloLMKMax(holo, k_max)

    def gain_holo_lm_initial(self, holo: ctypes.c_void_p, ptr: Any, len: int) -> None:
        return self.dll.AUTDGainHoloLMInitial(holo, ptr, len)

    def gain_holo_add(self, holo: ctypes.c_void_p, x: float, y: float, z: float, amp: float) -> None:
        return self.dll.AUTDGainHoloAdd(holo, x, y, z, amp)

    def gain_holo_set_dot_care_constraint(self, holo: ctypes.c_void_p) -> None:
        return self.dll.AUTDGainHoloSetDotCareConstraint(holo)

    def gain_holo_set_normalize_constraint(self, holo: ctypes.c_void_p) -> None:
        return self.dll.AUTDGainHoloSetNormalizeConstraint(holo)

    def gain_holo_set_uniform_constraint(self, holo: ctypes.c_void_p, value: float) -> None:
        return self.dll.AUTDGainHoloSetUniformConstraint(holo, value)

    def gain_holo_set_clamp_constraint(self, holo: ctypes.c_void_p, min: float, max: float) -> None:
        return self.dll.AUTDGainHoloSetClampConstraint(holo, min, max)

    def delete_gain_holo(self, holo: ctypes.c_void_p) -> None:
        return self.dll.AUTDDeleteGainHolo(holo)
